--- a/HW Assignments/HW5/hw5.ipynb
+++ b/HW Assignments/HW5/hw5.ipynb
@@ -949,7 +949,7 @@
    },
    "outputs": [],
    "source": [
-    "##\n",
+    "## calculating percentages\n",
     "rf = (100*rf_results.apply(np.sum, axis = 0)) / (rf_results.shape[0])\n",
     "logit = (100*logit_results.apply(np.sum, axis = 0)) / (logit_results.shape[0])\n",
     "ada = (100*ada_results.apply(np.sum, axis = 0)) / (ada_results.shape[0])"
@@ -1562,22 +1562,6 @@
     "axes[2,0].set_xlabel('Feature Selection Percentage')\n",
     "axes[2,0].set_title('AdaBoost')'''"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80407a4e-50df-4bfe-b964-e4ceebf74e45",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb104922-4fce-40d4-b4aa-f0db5bf41fe1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
