--- a/Exams/Exam 1/exam1.ipynb
+++ b/Exams/Exam 1/exam1.ipynb
@@ -1,11 +1,209 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "f5c46857-03af-468c-8c7c-d24373dc3b44",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "fe67f2e4-ece7-4ae1-b406-b2b20dee2066",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "questions"
+    "# exercise 1-15\n",
+    "## 1\n",
+    "## a: false\n",
+    "## b: true\n",
+    "## c: false\n",
+    "## d: false\n",
+    "## e: false\n",
+    "## f: false\n",
+    "## g: true\n",
+    "## h: false\n",
+    "## i: true\n",
+    "## j: true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "74cea621-d79a-4d4b-ac8e-4ef1c006435d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "## 2\n",
+    "## RFE is a framework that allows you to preform backward selection of the predictors. You can do this by by calculating \n",
+    "## importance scores for each predictors and based on these importancees, predictors are removed, and the model is re-built.\n",
+    "## Importance scores are then calculated again with the new model and the process repeats itself until it has reached a\n",
+    "## desired number of predictors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed5c4209-f696-457b-bf52-73fd93f6a434",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 3\n",
+    "## K-nn imputation is a technique that allows us to fill missing values with the mean value of the column using k closest\n",
+    "## neighbors. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "a7537b9d-236f-4059-9f60-568f52cdd1df",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "## 4\n",
+    "## I would use median imputation when there are outliers in the data because they can skew the data. I would use mean when \n",
+    "## distribution is normal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9ee275a-3119-4de3-bdaf-b9f075543a5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 5\n",
+    "## I would first start by splitting the data by month first, giving each month its own column.\n",
+    "## Then, I would separate the dates by season and create buckets (jan-march, april-june, july-september, october-december)\n",
+    "## Lastly, I would try split the data by years."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "229cafb1-bdf6-4603-b4dc-e4a206c3248e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 6\n",
+    "## i would use the precision-recall curve when I am dealing with imbalanced data. on the other hand, I would use the ROC\n",
+    "## curve to measure performance when the data is balanced. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a429d38-0662-4704-980e-28f2095095e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 7\n",
+    "## one of the biggest drawback with one v one is that it leaves data out, which can lead to bias because it is only \n",
+    "## cosindering binary classifications, whereas one v all compares one classification against the rest of the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8a1830e-6e80-401d-b887-ebfc97d125b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 8\n",
+    "## C: 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "cc3c0482-4a02-42ea-b13b-74d0f8df40a5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "## 9\n",
+    "## i would engineer a feature that seperates the by location. this would allow me to see if there are any specific\n",
+    "## locations that have heighten fraudulent cases.\n",
+    "## following this, i create dummy variables for each day of the week to see if there are specific days within the week that\n",
+    "## have higher fradulent cases.\n",
+    "## finally, i would engineer a feature based on time of day. this would allow me to see if there are specific time frames\n",
+    "## during the day/night that people most commonly committ fraud during."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a09f145-194d-4552-b53d-ae8b18dfbf61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 10\n",
+    "## a: the dataset is imbalanced\n",
+    "## for one feature, i would do a decision tree. if the balance was over $1,500 and an income over $20,000, the customer\n",
+    "## has a higher chance of getting flagged as default\n",
+    "## b: for another feature, i would like to see if the ratio between income and balance helps flag future credit card payments\n",
+    "## that are likely to default. specifically, the question I am trying to answer is: 'if the balance is higher than the\n",
+    "## income, are the customers more likely to default or not?'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2fd1e17-1a74-4a0a-9e48-497d398c1984",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 11\n",
+    "## B, C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc566ab0-3750-4c44-af90-89d4e7b1a305",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 12\n",
+    "## D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb4f8951-541c-4f43-8159-539565e0f2a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 13\n",
+    "## feature engineering is the process of creating new features based on features already present in the dataset.\n",
+    "## feature selection is the process of choosing what features positivley contribute to model performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b73d58f-9c9a-4794-927e-6e72d3211f07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 14\n",
+    "## feature selection helps reduce overfitting and helps decrease model complexity. it also helps determine what features\n",
+    "## are most significant to model performance. because simplier models are better,\n",
+    "## decreasing the number of features in the input data may increase model performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61b70b25-3fa5-4055-b768-0d978f6fe095",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 15\n",
+    "## I would chose model two because it had the highest average performance (79.2) across all five folds compared to\n",
+    "## model 1 (77.2) and model 3 (74.4)."
    ]
   },
   {
