--- a/In_Class_Assignments/In_Class_16 (randomsearchCV))/in_class_16.ipynb
+++ b/In_Class_Assignments/In_Class_16 (randomsearchCV))/in_class_16.ipynb
@@ -182,7 +182,11 @@
    "id": "7c6a9796-b298-4447-a7e4-084582e29e99",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## changing 'sales' and 'salary' to dummy variables\n",
+    "turnover = pd.concat([turnover.drop(columns = ['sales', 'salary'], axis = 1), pd.get_dummies(turnover[['sales', 'salary']])], axis = 1)\n",
+    "turnover.head()"
+   ]
   },
   {
    "cell_type": "code",
